--- a/App_LUMINOVA/templates/ventas/ventas_lista_ov.html
+++ b/App_LUMINOVA/templates/ventas/ventas_lista_ov.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-{% bootstrap_messages %}
+
 
 <div class="table-responsive mt-3">
     <table class="table table-striped table-hover align-middle"> {# align-middle para centrar verticalmente el contenido de las celdas #}
@@ -54,12 +54,13 @@
                 <td>
                     <span class="badge 
                         {% if ov.estado == 'PENDIENTE' %}bg-warning text-dark
-                        {% elif ov.estado == 'CONFIRMADA' %}bg-info
+                        {% elif ov.estado == 'CONFIRMADA' %}bg-secondary
+                        {% elif ov.estado == 'INSUMOS_SOLICITADOS' %}bg-info-subtle text-info-emphasis border border-info-subtle
                         {% elif ov.estado == 'PRODUCCION_INICIADA' %}bg-primary 
-                        {% elif ov.estado == 'PRODUCCION_CON_PROBLEMAS' %}bg-danger
-                        {% elif ov.estado == 'LISTA_ENTREGA' %}bg-secondary text-dark  {# Usar un color más distintivo #}
+                        {% elif ov.estado == 'PRODUCCION_CON_PROBLEMAS' %}bg-danger-subtle text-danger-emphasis border border-danger-subtle
+                        {% elif ov.estado == 'LISTA_ENTREGA' %}bg-primary-subtle text-primary-emphasis border border-primary-subtle
                         {% elif ov.estado == 'COMPLETADA' %}bg-success
-                        {% elif ov.estado == 'CANCELADA' %}bg-dark {# Usar un color más distintivo #}
+                        {% elif ov.estado == 'CANCELADA' %}bg-dark 
                         {% else %}bg-light text-dark{% endif %}">
                         {{ ov.get_estado_display }}
                     </span>
